<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatButton
                android:layout_centerVertical="true"
                android:background="@drawable/return_top"
                android:layout_width="12dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/register_bg"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/action_bar_size"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_user_name"
                android:ems="15"
                android:hint="@string/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_phone_number"
                android:ems="15"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_email"
                android:ems="10"
                android:hint="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fragment_register_age"
                    android:ems="3"
                    android:inputType="number"
                    android:hint="@string/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/fragment_register_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/spinner_gender"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_password"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_register_button"
                android:layout_width="281dp"
                android:layout_height="45dp"
                android:layout_margin="16dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="@drawable/button_login"
                android:text="@string/register"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>